# executable-examination-example-starter

./: .gitignore  .ruff.toml  README.md
.github/workflows/: build.yml
exam/: gatorgrade.yml  pyproject.toml  shell.nix
exam/questions/: question_one.py
exam/tests/: conftest.py  test_question_one.py
insight/: insight-report-20241108-10-29-38.json
